# locutus-utils

./: Dockerfile  pyproject.toml
.github/workflows/: deploy.yml
docs/: README.md  _sidebar.md  index.html  seed_data.md
src/locutils/: __init__.py  _version.py
src/locutils/support/: __init__.py  terminologies.yaml
src/locutils/tools/: seed_data.py
